# ML-netlogs-anomaly-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ops/grafana/dashboards/: api.json
ops/prometheus/: prometheus.yml
scripts/: generate_sample.py
src/: __init__.py  api.py  config.py  inference.py  logging_setup.py  preprocess.py  train.py
tests/: conftest.py  test_api.py  test_api_no_model.py  test_config.py  test_generate_sample.py  test_inference.py  test_logging_setup.py  test_preprocess.py  test_train.py
tests/fixtures/: sample_batch.json  sample_request.json
