[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detector"
version = "0.1.0"
description = "Production-style ML pipeline for network-log anomaly detection."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Dalton Herriman", email = "daltonclayherriman@gmail.com" }]
keywords = ["anomaly-detection", "soc", "ml", "xgboost", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",
    "mlflow>=2.10",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/dalton-herriman/ML-netlogs-anomaly-detection"
Issues = "https://github.com/dalton-herriman/ML-netlogs-anomaly-detection/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["env", ".venv", "venv", "mlruns", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
